# envsetup

./: Cargo.toml  README.md  envsetup.yml
.github/workflows/: build.yml  quickstart.yml
examples/: 01_py_venv_envsetup.yml
src/: cli_utils.rs  git.rs  lib.rs  main.rs  mod.rs  plan.rs  validations.rs
src/cli/: cli_utils.rs
src/config_file/: mod.rs
src/os/: mod.rs
src/toolchains/: docker.rs  mod.rs  python.rs  rust.rs
src/tools/: git.rs
