[package]
name = "envsetup"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["xiurobert <xiurobert@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"]}
serde_yaml = { version = "0.8.23"}
#git2 = "0.14"
clap = { version = "3.1.18", features = ["derive"] }
#reqwest = { version = "0.11.10", features = ["blocking"] }